# Chess

./: .gitignore  CMakeLists.txt  README.md  board.c  board.h  cmake_intall.py  globals.c  globals.h  gridcell.c  gridcell.h  main.c  makefile  menu.c  menu.h  menuitem.h  piece.c  piece.h
assets/: main.c
data/: chess_castle.webm  chess_en_passant_capture.webm  chess_force_resolve_check.webm  chess_game_over.webm  chess_pawn_promotion.webm  chess_valid_moves.webm  chess_valid_moves_cut.webm
include/: CMakeLists.txt  board.c  board.h  globals.h  gridcell.c  hashset.h  menu.c  piece.c  piece.h
src/: globals.c  main.c  makefile  menu.h  menuitem.c
